--- a/server/frontend/static/Home.html
+++ b/server/frontend/static/Home.html
@@ -8,6 +8,21 @@
 
 const logout = async (e) => {
 //Include the code for logout here.
+  let logout_url = window.location.origin+"/djangoapp/logout";
+  const res = await fetch(logout_url, {
+    method: "GET",
+  });
+  const json = await res.json();
+  if (json) {
+    let username = sessionStorage.getItem('username');
+    sessionStorage.removeItem('username');
+    window.location.href = window.location.origin;
+    window.location.reload();
+    alert("Logging out "+username+"...")
+  }
+  else {
+    alert("The user could not be logged out.")
+  }
 };
 
 let checkSession = ()=>{
@@ -16,13 +31,13 @@ let checkSession = ()=>{
   if (curr_user && curr_user !== "") {
     document.getElementById("loginlogout").innerHTML = 
     '<span class="homepage_links">' + curr_user +'</span>' +
-    '<a class="homepage_links" onclick="logout()" href="/">Logout</a>'
+    '<a class="homepage_links" onclick="logout()" href="/djangoapp/logout">Logout</a>'
   } else {
     document.getElementById("loginlogout").innerHTML = 
     '<a class="homepage_links" href="/login">Login</a>'+
     '<a class="homepage_links"  href="/register">Register</a>'
   }
- }
+}
 </script>
 </head>
 <body onload="checkSession()">
@@ -51,14 +66,14 @@ let checkSession = ()=>{
     </div>
   </div>
 </nav>
-<div style="display: flex;flex-direction: column;">
-<div class="card" style="width: 50%;margin-top: 50px;align-self: center;">
-  <img src="static/car_dealership.jpg" class="card-img-top" alt="...">
-  <div class="banner">
-    <h5>Welcome to our Dealerships!</h5>
-    <a href="/dealers" class="btn" style="background-color: aqua;margin:10px">View Dealerships</a>
+  <div style="display: flex;flex-direction: column;">
+    <div class="card" style="width: 50%;margin-top: 50px;align-self: center;">
+      <img src="static/car_dealership.jpg" class="card-img-top" alt="...">
+      <div class="banner">
+        <h5>Welcome to our Dealerships!</h5>
+        <a href="/dealers" class="btn" style="background-color: aqua;margin:10px">View Dealerships</a>
+      </div>
+    </div>
   </div>
-</div>
-</div>
 </body>
 </html>
